# global-engine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.ps1  one-thousand-years.sln  release.ps1
P3/ProyectoBase/: CMakeLists.txt  ProyectoBase.sln
P3/ProyectoBase/Projects/Application/: Application.vcxproj  Application.vcxproj.filters
P3/ProyectoBase/Projects/Engine/: Engine.vcxproj  Engine.vcxproj.filters  InfiniteAmmoEC.cpp  OrientationIC.cpp  OrientationIC.h  PropertySheet.props
P3/ProyectoBase/Projects/Saluda/: Saluda.vcxproj  Saluda.vcxproj.filters
P3/ProyectoBase/Src/Application/: Entity.cpp
P3/ProyectoBase/Src/Engine/: 3DObjectRC.cpp  3DObjectRC.h  Application.cpp  ApplicationContext.cpp  ApplicationContext.h  AutomaticEC.cpp  AutomaticEC.h  AutomaticRifleC.cpp  AutomaticRifleC.h  AutomaticRiflePowerUpC.cpp  AutomaticRiflePowerUpC.h  BulletC.cpp  BulletC.h  BulletEC.cpp  BulletEC.h  CameraObject.cpp  CameraObject.h  CameraRC.cpp  CameraRC.h  ChangeGravityIC.cpp  ChangeGravityIC.h  Component.cpp  Component.h  ComponentsManager.cpp  ComponentsManager.h  ConstantMovementC.cpp  ConstantMovementC.h  ConstantMovementPC.cpp  ConstantMovementPC.h  DebugDrawer.cpp  DebugDrawer.h  DestroyAfterSecsEC.cpp  DestroyAfterSecsEC.h  EnemyBehaviourEC.cpp  EnemyBehaviourEC.h  EnemyBehaviourPC.cpp  EnemyBehaviourPC.h  Entity.cpp  Entity.h  EventComponent.cpp  (+129 more)
P3/ProyectoBase/Src/Engine/Components/InputComponents/: InputComponent.h
P3/ProyectoBase/Src/Engine/Components/OtherComponents/: TransformComponent.cpp  TransformComponent.h
P3/ProyectoBase/Src/Engine/Components/PhysicsComponents/: PhysicsComponent.cpp  PhysicsComponent.h  TestComponent.cpp
P3/ProyectoBase/Src/Engine/Components/RenderComponents/: RenderComponent.cpp  RenderComponent.h
P3/ProyectoBase/Src/Engine/Core/: Application.cpp  CameraObject.cpp  Game.cpp  Game.h  OgreContext.cpp  OgreContext.h  Scene.cpp
P3/ProyectoBase/Src/Engine/Factory/: Factory.h
P3/ProyectoBase/Src/Engine/Managers/: ComponentsManager.cpp  ComponentsManager.h  Loader.cpp  Loader.h
P3/ProyectoBase/cmake/: FindFMOD.cmake  FindJsonCpp.cmake  FindOGRE.cmake
P3/ProyectoBase/lib/FreeImage/: FreeImage.2017.vcxproj
P3/ProyectoBase/lib/FreeImage/Source/FreeImageLib/: FreeImageLib.2017.vcxproj
P3/ProyectoBase/lib/FreeImage/Source/LibJPEG/: LibJPEG.2017.vcxproj
P3/ProyectoBase/lib/FreeImage/Source/LibJXR/: LibJXR.2017.vcxproj
P3/ProyectoBase/lib/FreeImage/Source/LibOpenJPEG/: LibOpenJPEG.2017.vcxproj
P3/ProyectoBase/lib/FreeImage/Source/LibPNG/: LibPNG.2017.vcxproj
P3/ProyectoBase/lib/FreeImage/Source/LibRawLite/: LibRawLite.2017.vcxproj
P3/ProyectoBase/lib/FreeImage/Source/LibTIFF4/: LibTIFF4.2017.vcxproj
P3/ProyectoBase/lib/FreeImage/Source/LibWebP/: LibWebP.2017.vcxproj
P3/ProyectoBase/lib/FreeImage/Source/OpenEXR/: OpenEXR.2017.vcxproj
P3/ProyectoBase/lib/FreeImage/Source/ZLib/: ZLib.2017.vcxproj
P3/ProyectoBase/lib/FreeImage/Wrapper/FreeImagePlus/: FreeImagePlus.2017.vcxproj
P3/ProyectoBase/lib/FreeImage/x64/Debug/: FreeImaged.exp
P3/ProyectoBase/lib/FreeImage/x64/Release/: FreeImage.exp
P3/ProyectoBase/lib/bullet/lib/Debug/: LinearMath_Debug.lib
P3/ProyectoBase/lib/bullet/lib/Release/: BulletCollision.lib  BulletDynamics.lib  (+1 more)
P3/ProyectoBase/lib/bullet3-2.89/include/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
(+591 files in other folders)
